# pkg-tawala

./: .gitignore  LICENSE  pyproject.toml
src/djangx/cli/management/commands/: generate.py
src/djangx/cli/settings/: generate.py  runcommands.py
src/mock/: pyproject.toml
src/mock/home/static/home/css/: tailwind.css
src/mock/home/templates/home/: index.html
src/tawala/api/backends/: storages.py
