[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project]
name = "djangX"
version = "1.5.1"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kevin Wakhisi", email = "kevin@christianwhocodes.space" }]
requires-python = ">=3.12"
dependencies = [
    "christianwhocodes>=1.2.5",
    "django>=6.0.1",
    "django-browser-reload>=1.21.0",
    "django-phonenumber-field[phonenumberslite]>=8.4.0",
    "django-watchfiles>=1.4.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
]

[project.urls]
homepage = "https://github.com/christianwhocodes/djangx#readme"
repository = "https://github.com/christianwhocodes/djangx"
issues = "https://github.com/christianwhocodes/djangx/issues"

[project.scripts]
djangx = "djangx.cli.manage:main"
djx = "djangx.cli.manage:main"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pillow>=12.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "vercel>=0.3.7",
]

[tool.djlint]
profile = "django"
ignore = "H016,H030,H031"
blank_line_before_tag = "block"
blank_line_after_tag = "load,extends,endblock"

[tool.ruff]
line-length = 101

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
