[project]
name = "tawala-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "tawala>=1.5.4",
    "vercel>=0.3.7",
]

[dependency-groups]
dev = ["djlint>=1.36.4", "ruff>=0.14.13"]

[tool.djlint]
blank_line_before_tag = "block"
blank_line_after_tag = "load,extends,endblock"

[tool.tawala]
